fixed various UI bugs, implemented related classifications/patents
re-wrote licensing request implementation / squashed bugs in ui
added json details view for patent docs
added 'related' classifications functionality
added 'related' patents functionality

--- a/src/application/custom/app.css
+++ b/src/application/custom/app.css
@@ -37,13 +37,18 @@
 
 fieldset > * {
   display: block;
-  margin-top: 10px;
+  margin-top: 7.5px;
+}
+
+.licensing-form, .prior-art-form {
+  font-size: 14px;
 }
 
 table.licensing-entries, table.prior-art-entries {
   margin: 1em 0;
   border-collapse: collapse;
   /*width: 100%;*/
+  table-layout: fixed;
   font-size: 14px;
 }
 
@@ -52,4 +57,5 @@ table.prior-art-entries td, table.prior-art-entries th {
   border: 1px solid #eee;
   padding: 10px;
   text-align: left;
+  /*width: 100px;*/
 }
